# circles_renderer

./: .gitignore  CMakeLists.txt  benchmark_results.csv
include/: parallel_renderer_SoA.h  parallel_renderer_SoA_over_pixels.h  parallel_renderer_base.h  parallel_renderer_over_pixels.h  renderer.h  sequential_renderer_base.h  sequential_renderer_mem_opt.h  utils.h
src/: main.cpp  parallel_renderer_SoA.cpp  parallel_renderer_SoA_over_pixels.cpp  parallel_renderer_base.cpp  parallel_renderer_over_pixels.cpp  renderer.cpp  sequential_renderer_base.cpp  sequential_renderer_mem_opt.cpp  utils.cpp
